2004-10-22  Mikael Hallendal  <micke@imendio.com>

	* Release 0.9.3

	* configure.in: Bumped version 
        * NEWS: Updated for 0.9.3

2004-10-21  Richard Hult  <richard@imendio.com>

	* src/dh-html.c (dh_html_open_uri): Fix compiler warning.

2004-10-21  Mikael Hallendal  <micke@imendio.com>

	* configure.in:
	* src/Makefile.am:
	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h:
	* src/dh-html.c: (html_init):
	* src/dh-main.c: (main):
	- Copied and pasted cluelesly from Epiphany, seems to use the correct
	  theme for scrollbars now at least...

2004-10-21  Mikael Hallendal  <micke@imendio.com>

	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h:
	* src/dh-html.c: (html_init):
        - Set font unit to pt for gecko widget.

2004-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* Makefile.am:
	* configure.in:
	* src/.cvsignore:
	* src/Makefile.am:
	* src/dh-main.c: (main):
	R devhelp.in: Get rid of the startup script. Fixes bug #154152.

2004-10-05  Mikael Hallendal  <micke@imendio.com>

	* src/*.[ch]:
	- s/Imendio HB/Imendio AB/

2004-09-30  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Enable compilation against firefox' gtkmozembed library.
	  Fixes bug #153999.

2004-09-27  Mikael Hallendal  <micke@imendio.com>

	* Release 0.9.2
	
	* NEWS: Updated for 0.9.2
	* configure.in: Bumped version to 0.9.2

2004-09-27  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/dh-keyword-model.c: (dh_keyword_model_filter):
        - Support searching for sub strings "gtk new" would find all functions
          including both gtk and new.

2004-09-19  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "mk" to ALL_LINGUAS.

2004-09-09  Ankit Patel <ankit@redhat.com>

	* configure.in: Add 'gu' (Gujarati) to ALL_LINGUAS.

2004-09-02  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-09  Mikael Hallendal  <micke@imendio.com>

	* src/Makefile.am: Added bacon-message-connection.[ch]