@@ -238,4 +238,5 @@ po/Makefile.in
 src/Makefile
 ui/Makefile
 misc/Makefile
+contrib/Makefile
 ])
