@@ -1,0 +1,3 @@
+These scripts are not maintained by the Devhelp maintainer and suggestions and
+comments should be sent directly to the script author.
+
